code rewiews mobile home page05

--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -30,18 +30,18 @@
 }
 
 @media only screen and (max-width: 767px) {
-	.containerButtonPortfolio {
-		justify-content: center;
-		width: 100%;
-		img {
-			width: 4.5vw;
-			height: 4.5vw;
-		}
+	// .containerButtonPortfolio {
+	// 	justify-content: center;
+	// 	width: 100%;
+	// 	img {
+	// 		width: 4.5vw;
+	// 		height: 4.5vw;
+	// 	}
 
-		.button {
-			font-size: 5.2vw;
-			background-color: #ffd622;
-			padding: 4.5vw 6.5vw;
-		}
-	}
+	// 	.button {
+	// 		font-size: 5.2vw;
+	// 		background-color: #ffd622;
+	// 		padding: 4.5vw 6.5vw;
+	// 	}
+	// }
 }
