--- a/src/components/ui/portfolioCart/PortfolioCart.module.scss
+++ b/src/components/ui/portfolioCart/PortfolioCart.module.scss
@@ -1,6 +1,6 @@
 .modalContent {
 	backdrop-filter: blur(10px);
-	background-color: #111111de;
+	background-color: #111111f2;
 	padding: 40px 40px 20px 40px;
 	border-radius: 5px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -53,5 +53,77 @@
 		text-align: center;
 		background-color: rgba(231, 191, 32, 0.75);
 		font-size: 20px;
+	}
+}
+@media only screen and (min-width: 1024px) and (max-width: 1279px) {
+	.modalContent {
+		max-width: 1000px;
+	}
+}
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+	.modalContent {
+		max-width: 800px;
+	}
+}
+
+@media only screen and (max-width: 767px) {
+	.modalContent {
+		margin: 0 20px;
+		padding: 40px 20px 10px 20px;
+		border-radius: 5px;
+		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+		max-width: 400px;
+		.close {
+			position: absolute;
+			top: 0px;
+			z-index: 500;
+			right: 20px;
+			cursor: pointer;
+			font-size: 30px;
+			color: #d0d0d0;
+		}
+		.containerObject {
+			flex-direction: column;
+			width: 100%;
+		}
+		.objectDescription {
+			flex: 1;
+			margin: 0px;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+		}
+		.descriptionItem {
+			.descriptionTitle {
+				line-height: 1;
+				margin-top: 10px;
+				margin-bottom: 10px;
+				color: rgb(255, 205, 67);
+				font-size: clamp(30px, 35px, 40px);
+				font-weight: bold;
+			}
+			.descriptionInfoObject {
+				font-size: 20px;
+			}
+			.descriptionWorkBeenDone {
+				color: rgb(115, 115, 115);
+				font-size: 15px;
+			}
+		}
+		.descriptionContainerButton {
+			display: flex;
+			margin-top: 20px;
+			margin-bottom: 20px;
+			gap: 10px;
+		}
+		.descriptionButton {
+			margin-top: 20px;
+			display: 1 0 45%;
+			border-radius: 10px;
+			padding: 10px;
+			text-align: center;
+			background-color: rgba(231, 191, 32, 0.75);
+			font-size: 20px;
+		}
 	}
 }
