--- a/src/components/screens/calculator/calculatorPage/CalculatorPage.module.scss
+++ b/src/components/screens/calculator/calculatorPage/CalculatorPage.module.scss
@@ -22,15 +22,14 @@
 	align-items: center;
 	border-radius: 10px;
 	margin-top: 20px;
-	// background-color: $bgDefaultAccentBlock;
 	.contentHeaderTitle {
 		margin-top: 20px;
-		font-size: 45px;
+		font-size: clamp(17px, 25px, 45px);
 		color: #ffd622;
 		font-weight: 800;
 	}
 	.contentHeaderSubtitle {
-		font-size: 25px;
+		font-size: clamp(15px, 18px, 25px);
 		color: $fontColorAccent;
 		font-weight: 800;
 		margin-bottom: 40px;
@@ -39,6 +38,7 @@
 .containerDescription {
 	display: flex;
 	gap: 10px;
+	flex-wrap: wrap;
 	.descriptionItem {
 		margin-top: 10px;
 		flex: 1 0 48%;
@@ -114,4 +114,37 @@
 	display: flex;
 	justify-content: end;
 	margin-top: 43px;
+}
+@media only screen and (max-width: 767px) {
+	.container {
+		margin: 0 20px;
+	}
+	.containerHeader {
+		align-items: start;
+		border-radius: 10px;
+		margin-top: 20px;
+		.contentHeaderTitle {
+			margin-top: 20px;
+			color: #ffd622;
+			font-weight: 800;
+		}
+		.contentHeaderSubtitle {
+			margin-top: 10px;
+			margin-bottom: 10px;
+		}
+	}
+	.containerDescription {
+		display: flex;
+		gap: 10px;
+		flex-wrap: wrap;
+		.descriptionItem {
+			margin-top: 10px;
+			flex: 1 0 52%;
+			border-radius: 10px;
+			background-color: $bgDefaultAccentBlock;
+			padding: 20px;
+			font-size: 15px;
+			color: $fontColorAccent;
+		}
+	}
 }
