--- a/src/components/ui/portfolioCart/PortfolioCart.module.scss
+++ b/src/components/ui/portfolioCart/PortfolioCart.module.scss
@@ -68,7 +68,7 @@
 
 @media only screen and (max-width: 767px) {
 	.modalContent {
-		margin: 0 20px;
+		// margin: 0 20px;
 		padding: 40px 20px 10px 20px;
 		border-radius: 5px;
 		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
