--- a/src/components/screens/services/coverServices/CoverServices.module.scss
+++ b/src/components/screens/services/coverServices/CoverServices.module.scss
@@ -22,20 +22,21 @@
 	text-align: center;
 	.contentHeaderTitle {
 		margin: 0 auto;
-		font-size: 45px;
+		font-size: clamp(15px, 25px, 45px);
 		color: #ffd622;
 		font-weight: 800;
 		width: 80%;
 	}
 
 	.contentHeaderSubtitle {
-		font-size: 25px;
+		font-size: clamp(12px, 15px, 25px);
 		color: $fontColor;
 	}
 }
 
 .containerAdvantages {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 10px;
 	margin-top: 20px;
 	.advantagesItem {
@@ -82,4 +83,61 @@
 
 .containerExamples {
 	margin-top: 10px;
+	display: flex;
+	border-radius: 10px;
+	background-color: #2727273b;
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+	.container {
+		margin: 0 20px;
+		max-width: 1280px;
+	}
+}
+
+@media only screen and (max-width: 767px) {
+	.container {
+		margin: 0 20px;
+	}
+	.containerDescription {
+		display: flex;
+		justify-content: space-between;
+		margin-top: 40px;
+		border-radius: 10px;
+		background-color: #2727273b;
+		padding: 20px;
+		span {
+			font-size: 25px;
+			color: $fontColorAccent;
+			font-weight: 800;
+		}
+		img {
+			width: 10%;
+		}
+	}
+	.containerHeader {
+		display: flex;
+		flex-direction: column;
+		text-align: center;
+		.contentHeaderTitle {
+			margin-top: 20px;
+			color: #ffd622;
+			font-weight: 800;
+			width: 100%;
+		}
+		.contentHeaderSubtitle {
+			margin-top: 10px;
+			color: $fontColor;
+		}
+	}
+	.containerAdvantages {
+		.advantagesItem {
+			flex: 1 0 47%;
+			padding: 10px;
+			img {
+				width: 10%;
+				margin-bottom: 10px;
+			}
+		}
+	}
 }
