--- a/src/components/landingPage/wrapperTeam/carousel/Carousel.scss
+++ b/src/components/landingPage/wrapperTeam/carousel/Carousel.scss
@@ -13,7 +13,7 @@
 	background-color: $bgDefaultAccentBlock;
 	height: 400px;
 	cursor: pointer;
-	background-image: url('/public/static/DSC08377.jpg');
+	background-image: url('/static/DSC08377.jpg');
 	background-size: cover; /* чтобы изображение занимало всю доступную область */
 	background-position: center;
 }
