--- a/src/components/wrappers/banner/HomeBanner.module.scss
+++ b/src/components/wrappers/banner/HomeBanner.module.scss
@@ -47,9 +47,9 @@
 	p {
 		font-weight: 800;
 		color: $fontColor;
-		font-size: 1vw;
+		font-size: 14px;
 		line-height: 1.5;
-		width: 40%;
+		width: 50%;
 	}
 }
 
@@ -186,7 +186,7 @@
 		text-align: center;
 		p {
 			padding: 10px;
-			font-size: 5vw;
+			font-size: 18px;
 			line-height: 1.5;
 			width: 100%;
 		}
