--- a/src/components/calculator/checkBoxButton/CheckBoxButton.module.scss
+++ b/src/components/calculator/checkBoxButton/CheckBoxButton.module.scss
@@ -3,7 +3,6 @@
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
-	border-bottom: 1px solid $white;
 	.buttonWrapper {
 		margin-bottom: 10px;
 	}
@@ -12,6 +11,7 @@
 		padding: 10px 20px;
 		margin-right: 10px;
 		border: none;
+		border-radius: 5px;
 		font-weight: 800;
 		cursor: pointer;
 		outline: none;
@@ -22,7 +22,7 @@
 			color: rgb(7, 7, 7);
 		}
 		&:hover {
-			color: $black;
+			color: $fontColorAccent;
 		}
 	}
 
