--- a/src/components/footer/footerQuestion/FooterQuestion.module.scss
+++ b/src/components/footer/footerQuestion/FooterQuestion.module.scss
@@ -14,11 +14,11 @@
 .containerFeedback {
 	display: flex;
 	flex-wrap: wrap;
+	gap: 10px;
 	padding: 20px 0px;
 }
 .feedbackBlockQuestion {
 	flex: 1 0 49%;
-	margin-right: 10px;
 	display: flex;
 	flex-direction: column;
 	width: 100%;
