--- a/src/components/screens/services/coverServices/CoverServices.module.scss
+++ b/src/components/screens/services/coverServices/CoverServices.module.scss
@@ -20,16 +20,17 @@
 	display: flex;
 	flex-direction: column;
 	text-align: center;
+	margin: 30px 0px 20px 0px;
 	.contentHeaderTitle {
 		margin: 0 auto;
-		font-size: clamp(15px, 25px, 45px);
+		font-size: clamp(15px, 45px, 65px);
 		color: #ffd622;
 		font-weight: 800;
 		width: 80%;
 	}
 
 	.contentHeaderSubtitle {
-		font-size: clamp(12px, 15px, 25px);
+		font-size: clamp(12px, 25px, 35px);
 		color: $fontColor;
 	}
 }
