--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -10,6 +10,7 @@
 
 	.button {
 		display: flex;
+		text-align: center;
 		justify-content: center;
 		gap: 5px;
 		cursor: pointer;
@@ -17,6 +18,7 @@
 		border: none;
 		border-radius: 5px;
 		font-weight: 800;
+		height: 100%;
 		color: $black;
 		transition: background-color 0.3s ease;
 		a {
