--- a/src/components/ui/formFeedback/FormFeedback.module.scss
+++ b/src/components/ui/formFeedback/FormFeedback.module.scss
@@ -7,21 +7,34 @@
 	margin: 0 auto;
 	border-radius: 10px;
 
+	.headerTitle {
+		text-align: center;
+		font-size: 20px;
+		font-weight: 800;
+		color: $fontColorAccent;
+	}
 	.contactMetodBlock {
 		display: flex;
 		gap: 10px;
 	}
+	.question {
+		margin-bottom: 20px;
+		label {
+			margin-top: 20px;
+			margin-bottom: 5px;
+		}
+	}
+
 	& label {
 		display: block;
-		font-size: 14px;
+		font-size: 18px;
 		font-weight: bold;
-		color: $bgDefaultAccent;
+		color: $fontColorAccent;
 	}
 
 	& input[type='text'],
 	& input[type='tel'],
 	& textarea {
-		margin-top: 10px;
 		margin-bottom: 10px;
 		display: block;
 		width: 100%;
@@ -30,10 +43,10 @@
 		border-radius: 4px;
 		font-size: 14px;
 		line-height: 1.5;
-		color: $bgDefaultAccent;
+		color: $fontColorAccent;
 		background-color: $bgdefault;
 		&::placeholder {
-			color: #3b3b3b;
+			color: $fontColorAccent;
 		}
 		&:focus {
 			outline: none;
@@ -46,6 +59,9 @@
 	}
 
 	.headerCheckBox {
+		label {
+			margin-bottom: 10px;
+		}
 	}
 	.postData {
 		display: flex;
