--- a/src/components/wraperPortfolio/WrapperPortfolio.module.scss
+++ b/src/components/wraperPortfolio/WrapperPortfolio.module.scss
@@ -19,10 +19,10 @@
 	justify-content: space-between;
 	.containerContent {
 		&:first-child {
-			flex: 1 0 80%;
+			flex: 1 0 70%;
 		}
 		&:last-child {
-			flex: 1 0 25%;
+			flex: 1 0 20%;
 		}
 	}
 }
@@ -70,5 +70,17 @@
 	}
 	.contentHeaderTitle {
 		text-align: center;
+	}
+	.containerHeader {
+		display: flex;
+		justify-content: space-between;
+		.containerContent {
+			&:first-child {
+				flex: 1 0 80%;
+			}
+			&:last-child {
+				flex: 1 0 20%;
+			}
+		}
 	}
 }
