--- a/src/components/wraperPortfolio/sliderMain/SliderMain.module.scss
+++ b/src/components/wraperPortfolio/sliderMain/SliderMain.module.scss
@@ -10,11 +10,13 @@
 		&::after {
 			content: url('/static/slider/browseSlider.svg');
 			position: absolute;
-			top: 41%;
-			left: 44%;
+			top: 47%;
+			left: 47%;
+
 			opacity: 0;
-			width: 12px;
-			height: 12px;
+			transform: translate(-50%, -50%);
+			width: 50px;
+			height: 50px;
 			transition: opacity 0.3s ease;
 		}
 
