code rewiews mobile home page10

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -3,6 +3,7 @@
 $accent: #ffd100;
 $fontColor: #d6d6d6;
 $fontColorAccent: #bababae2;
+$fontColorAccentV2: rgb(126 126 126);
 $black: #202020;
 $white: #ebebeb;
 
