--- a/src/components/landingPage/wrapperStageWork/WrapperStagesWork.module.scss
+++ b/src/components/landingPage/wrapperStageWork/WrapperStagesWork.module.scss
@@ -30,21 +30,22 @@
 }
 
 .contentHeaderTitle {
-	font-size: 30px;
+	font-size: 33px;
+	font-weight: 800;
 	color: $accent;
 }
 
 .containerWrapper {
 	display: flex;
+	gap: 10px;
 	position: relative;
-	// margin: 0 -100px;
 }
 
 .containerStageWork {
 	display: flex;
 	flex: 1;
 	align-items: center;
-	height: 100px;
+	justify-content: center;
 }
 
 .line {
@@ -54,23 +55,19 @@
 }
 
 .circle {
-	cursor: pointer;
-	position: relative;
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	background-color: $bgDefaultAccent;
+	width: 100%;
+	padding: 10px 20px;
+	border-radius: 10px;
+	background-color: $bgDefaultAccentBlock;
 	font-weight: 800;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	color: $fontColorAccent;
+	color: $fontColorAccentV2;
 	font-size: 16px;
 	transition: background-color 0.5s ease;
 	p {
-		color: $bgdefault;
-		position: absolute;
-		top: -30px;
+		// color: $bgdefault;
 		&:hover {
 			color: $black;
 		}
@@ -78,23 +75,19 @@
 }
 
 .circleShow {
-	cursor: pointer;
-	position: relative;
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	background-color: $accent;
+	width: 100%;
+	padding: 10px 20px;
+	border-radius: 10px;
+	background-color: $fontColorAccent;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	color: $fontColorAccent;
+	color: $black;
 	font-weight: 800;
 	font-size: 16px;
 	transition: background-color 0.5s ease;
 	p {
 		font-weight: 800;
-		position: absolute;
-		top: -30px;
 		&:hover {
 			color: $black;
 		}
@@ -112,7 +105,8 @@
 }
 
 .WrapperDescription {
-	flex: 1 0 80%;
+	flex: 1 0 70%;
+	height: 100px;
 	font-weight: 800;
 	color: $fontColorAccent;
 	background-color: $bgDefaultAccentBlock;
@@ -143,13 +137,17 @@
 	border-radius: 10px;
 	font-size: 25px;
 	padding: 10px;
-	height: 100px;
 	border: 2px solid $accent;
 	cursor: pointer;
 	transition: border 0.5s ease, color 0.5s ease, background-color 0.5s ease;
 	&:hover {
-		background-color: $fontColor;
-		border: 2px solid $fontColor;
+		background-color: $bgDefaultAccentBlock;
+		// border: 2px solid $fontColor;
 		color: $accent;
+	}
+}
+@media only screen and (max-width: 767px) {
+	.container {
+		margin: 0 20px;
 	}
 }
