--- a/src/components/ui/itemAdvantage/ItemAdvantage.module.scss
+++ b/src/components/ui/itemAdvantage/ItemAdvantage.module.scss
@@ -1,7 +1,8 @@
 @import 'src/assets/styles/variables';
 .containerItem {
-	flex: 1 0 23%;
+	flex: 1 0 25%;
 	display: flex;
+	gap: 5px;
 	border-radius: 10px;
 	padding: 20px;
 	flex-direction: column;
@@ -11,21 +12,25 @@
 		align-items: center;
 		.ItemTitle {
 			font-size: 20px;
+			font-weight: 800;
+			color: $fontColor;
+			margin-left: 5px;
 		}
 		img {
 			position: relative;
-			top: -8px;
+			top: -10px;
 			width: 15%;
 		}
 	}
 	.BlockSubtitle {
 		font-size: 15px;
-		color: rgb(109, 109, 109);
+		font-weight: 800;
+		color: $fontColorAccentV2;
 	}
 }
 @media only screen and (max-width: 767px) {
 	.containerItem {
-		flex: 1 0 46%;
+		flex: 1 0 55%;
 		display: flex;
 		border-radius: 10px;
 		padding: 20px 20px;
@@ -35,15 +40,15 @@
 			display: flex;
 			align-items: center;
 			.ItemTitle {
-				font-size: 15px;
+				// font-size: 15px;
 			}
 			img {
 				width: 10%;
-				top: 0;
+				// top: 0;
 			}
 		}
 		.BlockSubtitle {
-			font-size: 12px;
+			// font-size: 12px;
 			color: rgb(109, 109, 109);
 		}
 	}
