code rewiews mobile home page14

--- a/src/components/landingPage/wrapperAdvantage/WrapperAdvantage.module.scss
+++ b/src/components/landingPage/wrapperAdvantage/WrapperAdvantage.module.scss
@@ -1,5 +1,6 @@
 @import 'src/assets/styles/variables';
 .wrapperAdvantage {
+	margin-top: 20px;
 }
 .container {
 	margin: 0 auto;
@@ -37,7 +38,7 @@
 }
 .contentHeaderTitle {
 	width: 100%;
-	font-size: 45px;
+	font-size: 36px;
 	line-height: 1;
 	font-weight: bold;
 }
