--- a/src/components/calculator/CalculatorUI.module.scss
+++ b/src/components/calculator/CalculatorUI.module.scss
@@ -19,9 +19,11 @@
 		font-weight: 800;
 	}
 }
-
+.dopRadots {
+	margin-top: 20px;
+}
 .rangeOfRoomBlock {
-	margin-top: 10px;
+	margin-top: 20px;
 	margin-bottom: 20px;
 	label {
 		margin-bottom: 10px;
@@ -30,6 +32,7 @@
 		}
 	}
 	.customRange {
+		margin-top: 10px;
 		position: relative;
 		width: 100%;
 		height: 10px;
@@ -74,10 +77,15 @@
 	.containerHeaderForm {
 		display: flex;
 		flex-direction: column;
+		gap: 10px;
+		margin-bottom: 20px;
 		.contentHeaderTitleForm {
 			font-size: 25px;
 			color: $fontColorAccent;
 			font-weight: 800;
+			span {
+				color: $accent;
+			}
 		}
 		.contentHeaderSubtitleForm {
 			font-size: 15px;
@@ -110,8 +118,9 @@
 	& label {
 		display: block;
 		font-size: 20px;
+		margin: 5px 0px;
 		font-weight: bold;
-		color: #646464;
+		color: $fontColor;
 	}
 
 	& input[type='range'] {
@@ -141,7 +150,7 @@
 		border-radius: 4px;
 		background-color: #333;
 		color: $fontColorAccent;
-		font-size: 14px;
+		font-size: clamp(12px, 2vw, 14px);
 		font-weight: bold;
 		cursor: pointer;
 
@@ -186,6 +195,8 @@
 				border-radius: 5px;
 				background-color: #333;
 				span {
+					position: relative;
+					top: 9px;
 					font-size: 25px;
 					color: $fontColorAccent;
 				}
@@ -250,6 +261,10 @@
 	}
 }
 @media only screen and (max-width: 767px) {
+	.calculatorBlock {
+		display: flex;
+		padding: 10px;
+	}
 	.numberOfRoomsBlock {
 		display: flex;
 		margin-bottom: 10px;
