--- a/src/components/header/navigation/Navbar.module.scss
+++ b/src/components/header/navigation/Navbar.module.scss
@@ -41,6 +41,10 @@
 			top: -1px;
 			width: 30px;
 			height: 30px;
+			transition: transform 0.5s;
+			&.arrow {
+				transform: rotate(-180deg);
+			}
 		}
 		&:hover {
 			color: $accent;
