--- a/src/components/screens/services/coverServices/CoverServices.module.scss
+++ b/src/components/screens/services/coverServices/CoverServices.module.scss
@@ -19,18 +19,19 @@
 .containerHeader {
 	display: flex;
 	flex-direction: column;
+	gap: 10px;
 	text-align: center;
-	margin: 30px 0px 20px 0px;
+	margin: 30px 0px 30px 0px;
 	.contentHeaderTitle {
 		margin: 0 auto;
-		font-size: clamp(15px, 45px, 65px);
+		font-size: clamp(26px, 4vw, 48px);
 		color: #ffd622;
 		font-weight: 800;
 		width: 80%;
 	}
 
 	.contentHeaderSubtitle {
-		font-size: clamp(12px, 25px, 35px);
+		font-size: clamp(18px, 4vw, 25px);
 		color: $fontColor;
 	}
 }
@@ -39,32 +40,11 @@
 	display: flex;
 	flex-wrap: wrap;
 	gap: 10px;
-	margin-top: 20px;
-	.advantagesItem {
-		flex: 1 0 23%;
-		display: flex;
-		flex-direction: column;
-		border-radius: 10px;
-		background-color: #2727273b;
-		padding: 20px;
-		img {
-			width: 20%;
-			margin-bottom: 10px;
-		}
-		.itemTitle {
-			font-size: 25px;
-			margin-bottom: 10px;
-		}
-		.itemSubtitle {
-			font-size: 15px;
-			color: rgb(109, 109, 109);
-		}
-	}
 }
 .containerDescription {
 	display: flex;
 	justify-content: end;
-	margin-top: 40px;
+	margin-top: 20px;
 	border-radius: 10px;
 	background-color: #2727273b;
 	padding: 20px;
@@ -74,6 +54,9 @@
 		font-weight: 800;
 	}
 	img {
+		margin-left: 5px;
+		position: relative;
+		top: -8px;
 		width: 3%;
 	}
 }
@@ -103,7 +86,7 @@
 	.containerDescription {
 		display: flex;
 		justify-content: space-between;
-		margin-top: 40px;
+		margin-top: 20px;
 		border-radius: 10px;
 		background-color: #2727273b;
 		padding: 20px;
@@ -120,15 +103,15 @@
 		display: flex;
 		flex-direction: column;
 		text-align: center;
+		margin: 30px 0px 10px 0px;
 		.contentHeaderTitle {
-			margin-top: 20px;
 			color: #ffd622;
 			font-weight: 800;
 			width: 100%;
 		}
 		.contentHeaderSubtitle {
-			margin-top: 10px;
 			color: $fontColor;
+			font-size: clamp(15px, 3vw, 25px);
 		}
 	}
 	.containerAdvantages {
